<resources>
    <string name="app_name">Foundit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_flow_setting">FlowSettingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map2">MapActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_feed">Map</string>


    <!-- login activity -->
    <string name="register_request">Register</string>
    <string name="login_request">Login</string>
    <!-- FindFoundScreen -->
    <string name="found_string">Found</string>
    <string name="lost_string">Find</string>
    <string name="title_activity_find">FindActivity</string>

    <!-- Find Activity -->
    <string name="looking_for">Looking for</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_find2">FindActivity2</string>
    <string name="large_text">

    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="send">send</string>

    <!-- searchable -->
    <string name="search_hint">search_hint</string>
    <string name="search_setting">search_setting</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
        <![CDATA[
            <b>%1$s</b>
            <br/>
            <i>Place Id: %2$s</i>
            <br/>
            Address: %3$s
            <br/>
            Phone: %4$s
            <br/>
              Website: %5$s
            ]]>
    </string>

    <string name="foundfeedlistlabel">New Founds</string>
    <string name="lostfeedlistlabel">New Losts</string>
    <string name="title_activity_location_related_feeds">LocationRelatedFeedsActivity</string>

    <!-- detail screen -->
    <string name="title">title</string>
    <string name="Info_Label">Info</string>
    <string name="Info">Info</string>
    <string name="other_details_label">Other details</string>
    <string name="other_details">other details</string>

    <string name="contactbutton">Contact Founder</string>
</resources>
