<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_default"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cuilinchen.mappart.FeedDetailActivity.DetailActivity"
    android:id="@+id/detail_root_frame">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="@dimen/backbutton_width"
        android:layout_height="@dimen/backbutton_height"
        android:src="@drawable/back_button"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl1"

                android:layout_margin="@dimen/margin_small"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/detail_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:id="@+id/detail_tv_title"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"

                    android:layout_below="@id/detail_icon"

                    android:background="@drawable/roundedcorner_rect_80"

                    android:gravity="center"

                    android:hint="@string/title"
                    android:singleLine="true"
                    android:textSize="@dimen/text_huge"


                    android:paddingTop="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_small"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl1"
                android:orientation="vertical"

                android:background="@drawable/roundedcorner_rect_50"

                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small">

                <TextView
                    android:id="@+id/detail_tv_info_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/detail_icon"
                    android:hint="@string/Info_Label"


                    android:textSize="@dimen/text_large"

                    android:paddingTop="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    />

                <TextView
                    android:id="@+id/detail_tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_tv_info_label"

                    android:hint="@string/Info"

                    android:textSize="@dimen/text_medium_large"

                    android:paddingTop="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_large"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_small"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2"
                android:orientation="vertical"

                android:background="@drawable/roundedcorner_rect_50"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:id="@+id/detail_tv_other_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/detail_tv_info"

                    android:hint="@string/other_details_label"


                    android:paddingTop="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingRight="@dimen/margin_small"
                    android:textSize="@dimen/text_large"
                    />

                <TextView
                    android:id="@+id/detail_tv_other_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/detail_tv_other_details_label"

                    android:hint="@string/other_details"

                    android:textSize="@dimen/text_medium_large"

                    android:paddingTop="@dimen/margin_small"
                    android:paddingLeft="@dimen/margin_large"
                    android:paddingRight="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_small"

                    />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/contact_placer"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
